Adjust postgres version and auto dump

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,7 +46,7 @@ services:
     # ports:
     #   - 3000:3000
   db:
-    image: postgres
+    image: postgres:10
     volumes:
       - ./data:/var/lib/postgresql/data
     environment:
