--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -59,11 +59,11 @@ RUN apt-get update && apt-get install yarn
 
 
 # INSTALL POSTGRES 11
-#RUN apt-get install -y wget \
-#                       ca-certificates
-#RUN wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add -
-#RUN echo "deb http://apt.postgresql.org/pub/repos/apt/ `lsb_release -cs`-pgdg main" >> /etc/apt/sources.list.d/pgdg.list
-#RUN apt-get update && apt-get install -y postgresql postgresql-contrib
+RUN apt-get install -y wget \
+                       ca-certificates
+RUN wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add -
+RUN echo "deb http://apt.postgresql.org/pub/repos/apt/ `lsb_release -cs`-pgdg main" >> /etc/apt/sources.list.d/pgdg.list
+RUN apt-get update && apt-get install -y postgresql-client-10
 
 
 ENV RAILS_VERSION 5.2.1
