--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,10 +1,12 @@
-FROM ubuntu:16.04
+FROM ruby:2.6.3
+
 
 RUN apt-get update && apt-get install -y locales locales-all
 RUN sed -i -e 's/# en_US.UTF-8 UTF-8/en_US.UTF-8 UTF-8/' /etc/locale.gen && locale-gen
 ENV LANG en_US.UTF-8
 ENV LANGUAGE en_US:en
 ENV LC_ALL en_US.UTF-8
+
 
 ENV TZ "America/Sao_Paulo"
 RUN echo $TZ > /etc/timezone && \
@@ -14,10 +16,10 @@ RUN echo $TZ > /etc/timezone && \
   dpkg-reconfigure -f noninteractive tzdata && \
   apt-get clean
 
-ENV RUBY_MAJOR="2.6" \
-    RUBY_VERSION="2.6.1" \
-    DB_PACKAGES="libsqlite3-dev" \
-    RUBY_PACKAGES="ruby2.6.1 ruby2.6.1-dev"
+# ENV RUBY_MAJOR="2.6" \
+#     RUBY_VERSION="2.6.1" \
+#     DB_PACKAGES="libsqlite3-dev" \
+#     RUBY_PACKAGES="ruby2.6.1 ruby2.6.1-dev"
 
 
 RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \
@@ -34,24 +36,25 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \
       libpq-dev \
   && rm -rf /var/lib/apt/lists/*
 
-RUN echo 'gem: --no-document' >> /.gemrc
+# RUN echo 'gem: --no-document' >> /.gemrc
 
-RUN mkdir -p /tmp/ruby \
-  && curl -L "http://cache.ruby-lang.org/pub/ruby/$RUBY_MAJOR/ruby-$RUBY_VERSION.tar.bz2" \
-      | tar -xjC /tmp/ruby --strip-components=1 \
-  && cd /tmp/ruby \
-  && ./configure --disable-install-doc \
-  && make \
-  && make install \
-  && gem update --system \
-  && rm -r /tmp/ruby
+# RUN mkdir -p /tmp/ruby \
+#   && curl -L "http://cache.ruby-lang.org/pub/ruby/$RUBY_MAJOR/ruby-$RUBY_VERSION.tar.bz2" \
+#       | tar -xjC /tmp/ruby --strip-components=1 \
+#   && cd /tmp/ruby \
+#   && ./configure --disable-install-doc \
+#   && make \
+#   && make install \
+#   && gem update --system \
+#   && rm -r /tmp/ruby
 
 RUN rm -fr /usr/local/bin/bundle
 RUN gem install --no-document bundler
 
 
 RUN apt-get update && curl --silent --location https://deb.nodesource.com/setup_10.x | bash - && apt-get install -y nodejs --no-install-recommends && rm -rf /var/lib/apt/lists/*
-RUN apt-get update && apt-get install -y mysql-client postgresql-client libsqlite3-dev --no-install-recommends && rm -rf /var/lib/apt/lists/*
+# RUN apt-get update && apt-get install -y libsqlite3-dev --no-install-recommends && rm -rf /var/lib/apt/lists/*
+
 
 RUN curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
 RUN echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
@@ -66,36 +69,48 @@ RUN echo "deb http://apt.postgresql.org/pub/repos/apt/ `lsb_release -cs`-pgdg ma
 RUN apt-get update && apt-get install -y postgresql-client-10
 
 
-ENV RAILS_VERSION 5.2.1
-
-RUN gem install rails --version "$RAILS_VERSION"
+# ENV RAILS_VERSION 5.2.1
+# RUN gem install rails --version "$RAILS_VERSION"
 
 
 ENV RAILS_ROOT /var/www/alegreme
 RUN mkdir -p $RAILS_ROOT
 
+
 WORKDIR $RAILS_ROOT
+
 
 COPY ./docker-entrypoint.sh /
 RUN chmod +x /docker-entrypoint.sh
 ENTRYPOINT ["/docker-entrypoint.sh"]
+
 
 ENV BUNDLE_PATH=/bundle \
     BUNDLE_BIN=/bundle/bin \
     GEM_HOME=/bundle
 ENV PATH="${BUNDLE_BIN}:${PATH}"
 
+
 COPY Gemfile Gemfile
-COPY Gemfile.lock Gemfile.lock
+# COPY Gemfile.lock Gemfile.lock
+
+# RUN gem install bundler:2.0.2
+# RUN bundle update --bundler
+# RUN gem update --system
+
 RUN bundle install --jobs 20 --retry 5
+
 
 COPY . .
 
-RUN yarn install --check-files
-RUN bundle update --bundler
-RUN bundle exec rake webpacker:clobber
-RUN bundle exec rake assets:precompile
 
-EXPOSE 3000
+# RUN gem update --system
 
-CMD ["bundle", "exec", "puma", "-C", "config/puma.rb"]
+
+RUN yarn install
+RUN rake webpacker:clobber
+RUN rake assets:precompile
+
+# EXPOSE 3000
+
+# CMD ["bundle", "exec", "puma", "-C", "config/puma.rb"]
