--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -30,8 +30,8 @@ services:
       - ./web/test:/var/www/alegreme/test
       - ./storage:/var/www/alegreme/storage
     environment:
-      RAILS_ENV: development
-      RACK_ENV: development
+      RAILS_ENV: test
+      RACK_ENV: test
       RAILS_SERVE_STATIC_FILES: 'false'
       PGHOST: db
       PGUSER: postgres
@@ -42,7 +42,7 @@ services:
       ELASTICSEARCH_URL: http://search:9200
       IS_DOCKER: 'true'
       HTTP_HOST: 'www.alegreme.com'
-      NODE_ENV: development
+      NODE_ENV: test
     links:
       # - api
       - db
