Refactor task for populate events from facebook scrapy

--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -26,6 +26,9 @@ services:
       - bundle_cache:/bundle
       - ./web/app:/var/www/alegreme/app
       - ./web/config:/var/www/alegreme/config
+      - ./web/lib:/var/www/alegreme/lib
+      - ./web/scrapy:/var/www/scrapy/data/scraped
+      - ./web/public/uploads:/var/www/alegreme/public/uploads
       - ./web/db/backups:/var/www/alegreme/db/backups
       - ./web/test:/var/www/alegreme/test
       - ./storage:/var/www/alegreme/storage
@@ -50,6 +53,7 @@ services:
     restart: always
     ports:
       - 3000:3000
+    command: ["bundle", "exec", "puma", "-C", "config/puma.rb"]
   db:
     image: postgres
     volumes:
@@ -90,6 +94,7 @@ services:
     volumes:
       - api_data:/var/www/api/data
       - scrapy_shared:/var/www/scrapy/data
+      - ./ml/api:/var/www/ml/api
     environment:
       IS_DOCKER: 'true'
   # bot:
@@ -131,6 +136,9 @@ services:
     depends_on:
       - splash
     volumes:
+      - ./scrapy/classified:/var/www/scrapy/data/classified
+      - ./scrapy/scraped:/var/www/scrapy/data/scraped
+      - ./scrapy/alegreme:/var/www/scrapy/alegreme
       - scrapy_shared:/var/www/scrapy/data
       - scrapydo_data:/var/www/scrapy/projects
     ports:
