--- a/web/Gemfile
+++ b/web/Gemfile
@@ -89,16 +89,17 @@ gem 'active_record_extended'
 
 group :production do
   gem 'aws-sdk-s3'
+  gem 'sentry-raven'
 end
 
 group :development, :production do
-  gem 'sentry-raven'
 end
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
   gem 'dotenv-rails'
+	gem 'colorize'
 end
 
 group :development do
