--- a/scrapy/Dockerfile
+++ b/scrapy/Dockerfile
@@ -13,11 +13,11 @@ COPY requirements.txt ./
 RUN pip install -r requirements.txt
 
 
-RUN mkdir -p data/scraped
-RUN mkdir -p data/classified
+# RUN mkdir -p data/scraped
+# RUN mkdir -p data/classified
 
-COPY ./classified ./data/classified
-COPY ./scraped ./data/scraped
+# COPY ./classified ./data/classified
+# COPY ./scraped ./data/scraped
 
 COPY ./docker-entrypoint.sh /
 RUN chmod +x /docker-entrypoint.sh
