--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.2'
 volumes:
   bundle_cache: {}
-  scrapy_shared:
+  # scrapy_shared:
   db_data:
   db_backup:
   api_data:
@@ -19,11 +19,10 @@ services:
       - db
       - api
       - search
-      # - bot
       - scrapy
     volumes:
-      - scrapy_shared:/var/www/scrapy/data
       - bundle_cache:/bundle
+      - ./scrapy/data:/var/www/scrapy/data
       - ./web/app:/var/www/alegreme/app
       - ./web/config:/var/www/alegreme/config
       - ./web/lib:/var/www/alegreme/lib
@@ -89,25 +88,9 @@ services:
       - "5000:5000"
     volumes:
       - api_data:/var/www/api/data
-      - scrapy_shared:/var/www/scrapy/data
+      - ./scrapy/data:/var/www/scrapy/data
     environment:
       IS_DOCKER: 'true'
-  # bot:
-  #   build:
-  #     context: ./bot
-  #     dockerfile: ./Dockerfile
-  #   ports:
-  #     - "3030:3030"
-  #   volumes:
-  #     - bot_data:/var/www/bot/data
-  #   environment:
-  #     MONGO_URI: mongodb://jon:password@mongo:27017
-  #     PRIVATE_IP: '172.26.14.59'
-  #     PUBLIC_IP: '3.209.95.87'
-  #     WEB_DOMAIN: 'https://www.alegreme.com'
-  #   restart: always
-  #   depends_on:
-  #     - mongo
   search:
     build:
       context: ./search
@@ -124,14 +107,14 @@ services:
       context: ./scrapy
       dockerfile: ./Dockerfile
     environment:
-        SPLASH_URL: http://splash:8050
-        IS_DOCKER: 'true'
-        PRIVATE_IP: '172.26.7.70'
-        PUBLIC_IP: '3.223.33.161'
+      SPLASH_URL: http://splash:8050
+      IS_DOCKER: 'true'
+      PRIVATE_IP: '172.26.7.70'
+      PUBLIC_IP: '3.223.33.161'
     depends_on:
       - splash
     volumes:
-      - scrapy_shared:/var/www/scrapy/data
+      - ./scrapy/data:/var/www/scrapy/data
       - scrapydo_data:/var/www/scrapy/projects
     ports:
       - "7654:7654"
@@ -144,11 +127,3 @@ services:
     restart: always
     volumes:
       - splash_data:/var/www/splash/data
-  # mongo:
-  #   image: mongo:4.1
-  #   restart: always
-  #   environment:
-  #     MONGO_INITDB_ROOT_USERNAME: jon
-  #     MONGO_INITDB_ROOT_PASSWORD: password
-  #   volumes:
-  #     - mongo_data:/data/db
