--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -23,6 +23,7 @@ RUN echo $TZ > /etc/timezone && \
 
 
 RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \
+      nano \
       build-essential \
       curl \
       git-all \
