--- a/web/docker/web/nginx.conf
+++ b/web/docker/web/nginx.conf
@@ -1,6 +1,9 @@
 upstream rails_app {
     server app:3000;
 }
+upstream ml_api {
+    server api:5000;
+}
 server {
     listen 80;
     server_name alegreme.com www.alegreme.com;
@@ -49,6 +52,16 @@ server {
     ssl_certificate_key /etc/letsencrypt/live/alegreme.com/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+    location /ml/ {
+        rewrite ^/ml/?(.*)$ /$1 break;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $http_connection;
+        proxy_http_version 1.1;
+        proxy_pass http://ml_api;
+    }
     location / {
         proxy_set_header X-Real-IP  $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
