--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -32,6 +32,7 @@ services:
       # - ./web/db/backups:/var/www/alegreme/db/backups
       # - ./web/test:/var/www/alegreme/test
       - ./storage:/var/www/alegreme/storage
+      - ./logs/app:/var/www/alegreme/log
       # - ./web/scrapy:/var/www/scrapy/data/scraped
     environment:
       RAILS_ENV: development
@@ -96,6 +97,7 @@ services:
       - api_data:/var/www/api/data
       - ./scrapy/data:/var/www/scrapy/data
       - ./ml/api:/var/www/ml/api
+      - ./logs/api:/var/www/ml/api/log
     environment:
       IS_DOCKER: 'true'
   # bot:
@@ -145,6 +147,7 @@ services:
     ports:
       - "7654:7654"
     restart: always
+    command: scrapy-do --nodaemon --pidfile= scrapy-do --config scrapydo.conf
   splash:
     image: scrapinghub/splash
     ports:
