--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -6,7 +6,7 @@ volumes:
   db_backup:
   api_data:
   # bot_data:
-  search_data:
+  # search_data:
   scrapydo_data:
   splash_data:
   # mongo_data:
@@ -44,7 +44,7 @@ services:
       # AWS_SECRET_ACCESS_KEY: REMOVED
       # AWS_BUCKET: alegreme-event-cover
       API_URL: http://api
-      ELASTICSEARCH_URL: http://search:9200
+      # ELASTICSEARCH_URL: http://search:9200
       IS_DOCKER: 'true'
       HTTP_HOST: 'www.alegreme.com'
       NODE_ENV: development
