--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -110,4 +110,4 @@ RUN rake assets:precompile
 
 EXPOSE 3000
 
-CMD ["bundle", "exec", "puma", "-C", "config/puma.rb"]
+CMD cron -f && bundle exec puma -C config/puma.rb
