--- a/web/docker/web/nginx.conf
+++ b/web/docker/web/nginx.conf
@@ -19,6 +19,9 @@ server {
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
+    # location /.well-known/ {
+    #     root $RAILS_ROOT/.well-know;
+    # }
     location ~ ^/(assets|images|javascripts|stylesheets|swfs|system|packs)/ {
         root $RAILS_ROOT/public;
         try_files $uri @rails;
