--- a/web/docker/web/nginx.conf
+++ b/web/docker/web/nginx.conf
@@ -19,9 +19,6 @@ server {
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
-    # location /.well-known/ {
-    #     root $RAILS_ROOT/.well-know;
-    # }
     location ~ ^/(assets|images|javascripts|stylesheets|swfs|system|packs)/ {
         root $RAILS_ROOT/public;
         try_files $uri @rails;
@@ -55,6 +52,9 @@ server {
     ssl_certificate_key /etc/letsencrypt/live/alegreme.com/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+    location /.well-known/ {
+        root $RAILS_ROOT/well-know;
+    }
     location /ml/ {
         rewrite ^/ml/?(.*)$ /$1 break;
         proxy_set_header X-Real-IP $remote_addr;
