Adjust nginx to work with twa

--- a/web/docker/web/nginx.conf
+++ b/web/docker/web/nginx.conf
@@ -52,8 +52,9 @@ server {
     ssl_certificate_key /etc/letsencrypt/live/alegreme.com/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-    location /.well-known/ {
-        root $RAILS_ROOT/well-know;
+    location ^~ /.well-known {
+        root $RAILS_ROOT;
+        allow all;
     }
     location /ml/ {
         rewrite ^/ml/?(.*)$ /$1 break;
