--- a/web/docker/web/Dockerfile
+++ b/web/docker/web/Dockerfile
@@ -12,6 +12,10 @@ RUN mkdir log
 COPY public public/
 # Copy Nginx config template
 COPY docker/web/nginx.conf /tmp/docker.nginx
+
+RUN mkdir -p .well-known
+COPY docker/web/.well-known .well-known/
+
 # substitute variable references in the Nginx config template for real values from the environment
 # put the final config in its place
 RUN envsubst '$RAILS_ROOT' < /tmp/docker.nginx > /etc/nginx/conf.d/default.conf
