--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -99,16 +99,15 @@ RUN bundle install --jobs 20 --retry 5
 RUN bundle update --bundler
 
 
-COPY . .
-
+ADD . $RAILS_ROOT
 
 
 RUN rake assets:clobber
 RUN rake webpacker:clobber
-# RUN rake assets:precompile
-# RUN rake webpacker:compile
-
+RUN rake assets:precompile
+RUN rake webpacker:compile
 RUN yarn install
+
 
 EXPOSE 3000
 
