Adjust in ngins confs

--- a/web/docker/web/nginx.conf
+++ b/web/docker/web/nginx.conf
@@ -1,3 +1,13 @@
+worker_processes auto;
+worker_rlimit_nofile 10000;
+
+events {
+    # determines how much clients will be served per worker
+    # max clients = worker_connections * worker_processes
+    # max clients is also limited by the number of socket connections available on the system (~64k)
+    worker_connections 1000;
+}
+
 upstream rails_app {
     server app:3000;
 }
@@ -7,8 +17,12 @@ upstream ml_api {
 server {
     listen 80;
     server_name alegreme.com www.alegreme.com;
-    access_log $RAILS_ROOT/log/nginx.access.log;
-    error_log $RAILS_ROOT/log/nginx.error.log;
+    error_log $RAILS_ROOT/log/nginx.error.log crit;
+    reset_timedout_connection on;
+    client_body_timeout 10;
+    send_timeout 2;
+    keepalive_timeout 30;
+
     location ^~ /.well-known {
         root /var/www/certbot;
         allow all;
@@ -46,12 +60,17 @@ server {
     listen 443 ssl http2 default_server;
     server_name alegreme.com www.alegreme.com;
     server_tokens off;
-    access_log $RAILS_ROOT/log/nginx.access.log;
-    error_log $RAILS_ROOT/log/nginx.error.log;
+    error_log $RAILS_ROOT/log/nginx.error.log crit;
     ssl_certificate /etc/letsencrypt/live/alegreme.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/alegreme.com/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+    reset_timedout_connection on;
+    client_body_timeout 10;
+    send_timeout 2;
+    keepalive_timeout 30;
+
     location ^~ /.well-known {
         root $RAILS_ROOT;
         allow all;
